res/aria-client.yml
apiVersion: v1
kind: Service
metadata:
  name: aria-client-backend
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: aria-client
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: aria-client
spec:
  replicas: 1 
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: aria-client
    spec:
      containers:
        - image: gcr.io/nnmta-aria/aria-client:${CIRCLE_SHA1}
          imagePullPolicy: Always
          name: aria-client
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
                path: /
                port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
