res/aria-server.yml
apiVersion: v1
kind: Service
metadata:
  name: aria-server-backend
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: aria-server
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: aria-server
spec:
  replicas: 1 
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: aria-server
    spec:
      containers:
      - image: gcr.io/aria-nnmta/aria-server:${CIRCLE_SHA1} 
        imagePullPolicy: Always
        name: aria-server
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
              path: /
              port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
