res/aria-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aria-ingress 
  annotations:
    kubernetes.io/ingress.global-static-ip-name: aria-ip 
spec:
  rules:
    - host: api.aria.gishi.tech
      http:
        paths:
          - backend:
              serviceName: aria-server-backend
              servicePort: 8080
    - host: aria.gishi.tech
      http:
        paths:
          - backend:
              serviceName: aria-client-backend
              servicePort: 80
